[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "onnxmlir"
version = "0.1.0"
authors = [
  { name="Tong Chen", email="chentong@us.ibm.com" },
  { name="Alexandre Eichenberger", email="alexe@us.ibm.com" },
]
description = "Python driver to compile/run onnx model with onnx-mlir"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/onnx/onnx-mlir"
Issues = "https://github.com/onnx/onnx-mlir/issues"
